JEDIT VERSION HISTORY

* Version 2.3pre4

+ Enhancements

- Gutter option pane, new toggle-gutter and toggle-line-numbers
  actions

+ Bug Fixes

- Fixed NullPointerException when doing search and replace with tool bar
  disabled (since 2.3pre1)
- Buffer tabs position setting was broken (since 2.3pre3)

* Version 2.3pre3

+ New Features

- Views can be split - C+e 1 unsplits, C+e 2 splits vertically,
  C+e 3 splits horizontally.
- 'Indent Line' command replaced with 'Indent Selected Lines' -- it
  indents all lines in the selection, or the current line if nothing
  is selected
- BeanShell syntax highlighting for .bsh files
- Gutter shows line numbers, plugins can add highlighters
  (Mike Dillon)

+ Enhancements

- Buffer tabs position (top, left, right, bottom) can now be set
- Buffer tabs now show tool tips with the full path of buffers
- Better regexp and ignore case icons (Valery Kondakoff)
- Documentation updates
- HyperSearch no longer keeps all buffers with search results open
- JavaDoc comments (/** */) are now only treated specially in Java mode;
  they have no special meaning in other C-derived languages, such as
  C++, IDL, JavaScript or BeanShell
- Enhanced about box, displays info about loaded plugins
- Expanding an abbrev that is not defined with C+e C+x will ask if it
  should be added
- Select Line/Word/Paragraph now have keyboard shortcuts
- Documentation updates

+ Bug Fixes

- Buffer tabs are now implemented differently, and should work better
- Fixed a very minor memory leak (buffers would sometimes retain pointers
  to closed views' text areas) (since 1.7pre5)
- Docked plugins didn't work (Jason Ginchereau) (since 2.3pre2)
- PostScript token marker didn't handle string literals very well
  (since 2.3pre2)
- Obscure: HyperSearch called setBuffer() before commitTemporary() (since
  2.2pre7)

+ API Changes

- Because of the split pane code, plugins should now add highlighters
  when they receive the ViewUpdate.TEXTAREA_CREATED message, instead of