@@ -98,8 +98,8 @@ close-view.shortcut=C+e C+w
 redo.shortcut=C+e C+z
 expand-abbrev.shortcut=C+e C+x
 unsplit.shortcut=C+e 1
-split-vertical.shortcut=C+e 2
-split-horizontal.shortcut=C+e 3
+split-horizontal.shortcut=C+e 2
+split-vertical.shortcut=C+e 3
 select-line.shortcut=C+e l
 select-paragraph.shortcut=C+e p
 select-word.shortcut=C+e w
